# srt-gen

./: .gitignore  README.md  pyproject.toml
src/srt-generator/: main.py  writer.py
src/srt_gen/: cli.py  languages.py  main.py  speech.py  utils.py  whisper.py  writer.py
src/transcriber/: main.py  speech.py  utils.py  whisper.py
