[project]
name = "srt-gen"
version = "0.5.0"
description = "Transcribe media files and generate a subtitle"
readme = "README.md"
requires-python = ">=3.14"

dependencies = [
    "faster-whisper>=1.2.1",
    "mlx-audio>=0.4.5",
    "mlx-whisper>=0.4.3",
    "soundfile>=0.14.0",
    "torch>=2.13.0",
]

[project.scripts]
srt-gen = "srt_gen.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
torch = [
    { index = "pytorch-cu126", marker = "sys_platform != 'darwin'" },
]

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[tool.hatch.build.targets.wheel]
packages = ["src/srt_gen"]

[dependency-groups]
dev = [
    "ruff>=0.15.22",
]
